--- a/index.html
+++ b/index.html
@@ -1,46 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Bubbles App</title>
-    <style>
-      .box {
-        position: relative;
-        width: 400px;
-        height: 400px;
-        border: 3px solid black;
-        margin: auto;
-      }
-
-      .bubble {
-        position: absolute;
-        width: 60px;
-        height: 60px;
-        border-radius: 50%;
-        border: 2px solid black;
-      }
-
-      .arrow {
-        position: absolute;
-        width: 0;
-        height: 0;
-        border-style: solid;
-        border-width: 15px 50px 15px 0;
-        border-color: transparent black transparent transparent;
-      }
-
-      .btn {
-        margin-top: 10px;
-        background-color: green;
-        color: white;
-        width: 150px;
-        height: 50px;
-        margin-left: 45%;
-        margin-bottom: 30px;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-      }
-    </style>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
+    <title>Bubble App</title>
   </head>
   <body>
     <h1 style="text-align: center">Bubbles App</h1>
@@ -71,38 +35,4 @@
     <button class="btn" onclick="reset()">Reset</button>
   </body>
 </html>
-<script>
-  let bubbles = document.querySelectorAll(".bubble");
-  let arrows = document.querySelectorAll(".arrow");
-
-  bubbles.forEach((bubble, index) => {
-    bubble.setAttribute("iniColor", bubble.style.backgroundColor);
-    bubble.addEventListener("click", () => moveArrow(arrows[index], bubble));
-  });
-
-  function reset() {
-    let arrows = document.querySelectorAll(".arrow");
-    let bubbles = document.querySelectorAll(".bubble");
-
-    arrows.forEach((arrow) => {
-      arrow.style.transform = "translateX(0%)";
-    });
-
-    bubbles.forEach((bubble) => {
-      bubble.style.backgroundColor = bubble.getAttribute("iniColor");
-    });
-  }
-
-  function moveArrow(arrow, target) {
-    arrow.style.transition = "none";
-    let posi =
-      target.getBoundingClientRect().left -
-      arrow.getBoundingClientRect().left +
-      60;
-    arrow.style.transform = `translateX(${posi}px)`;
-
-    arrow.style.transition = "none";
-    arrow.style.transform = `translateX(${posi}px)`;
-    target.style.backgroundColor = "grey";
-  }
-</script>
+<script src="index.js"></script>
